Add new jni-extract project